fixing form size

--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -6,8 +6,7 @@
   &::after {
     content: "Portfolio";
     position: absolute;
-
-    font-size: calc(50px + 20vw);
+    font-size: calc(20vw);
     text-align: center;
     color: #ebb258;
     font-weight: 700;
