--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -22,6 +22,9 @@
         display: flex;
         width: 100%;
         @include flex(column, flex-start, normal, nowrap);
+        @media screen and (max-width: 699px) {
+          width: 280px;
+        }
         .contactBlock {
           width: 100%;
           height: 100%;
@@ -41,7 +44,7 @@
       .formContainer {
         width: 50%;
         max-width: 400px;
-        min-width: 300px;
+        min-width: 280px;
         border-radius: 20px;
         border: ridge 2px;
         border-collapse: collapse;
@@ -79,6 +82,7 @@
           padding-left: 5px;
           @media screen and (max-width: 699px) {
             height: 100px;
+            width: 280px;
           }
         }
         .submitButton {
