changed animation to react-awesome-reveal

--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -60,5 +60,9 @@
   }
   .middleBlackText {
     @include middleBlackText();
+    text-align: center;
+  }
+  .description {
+    text-align: justify;
   }
 }
