--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -1,13 +1,12 @@
 @import '../common/styles/sass/mixins.scss';
 @import '../common/styles/sass/variables.scss';
 .nav {
-  @include flex(row, space-around, center, nowrap);
-  width: 40%;
+  @include flex(row, space-between, center, nowrap);
+  width: 40vh;
   min-width: 340px;
   height: 40px;
   .navItem {
     @include buttonBeforeChanging(relative, 19px, 40px, 86px);
-    min-width: 86px;
     background-color: $bgColor;
     @include flex(row, center, center, nowrap);
     &::before {
