--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -1,54 +1,48 @@
 @import '../common/styles/sass/mixins.scss';
 
-.containerBlock {
-    width: 80%;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    min-height: 10vh;
-    @include flex(column, space-between, center, nowrap);
-    .linksBlock {
-      @include flex(row, center, normal, nowrap);
-      padding-top: 30px;
-      margin-bottom: 10px;
-      .logo {
-        width: 50px;
-        height: 50px;
-        background-color: rgb(155, 205, 209);
-        margin: 10px;
+.footerBlock {
+  width: 100%;
+  padding: 10px;
+  @include flex(column, space-between, center, nowrap);
+  .linksBlock {
+    @include flex(row, center, normal, nowrap);
+    .logo {
+      width: 50px;
+      height: 50px;
+      margin: 10px;
+      border-radius: 50%;
+      position: relative;
+      transition: 0.3s;
+      &::before {
+        position: absolute;
+        content: "";
+        background-color: black;
         border-radius: 50%;
-        position: relative;
-        &:hover {
-          scale: 1.1;
-          transition: 0.3s;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: 0;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      &:hover {
+        scale: 1.1;
+        &::before {
+          opacity: 0.5;
         }
-        &:hover::before {
-          position: absolute;
-          content: "";
-          background-color: black;
-          border-radius: 50%;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          opacity: 0.4;
-          cursor: pointer;
-          transition: 0.3s;
-        }
-        .imgLogo {
-          height: 100%;
-          width: 100%;
-          min-width: 50px;
-          border-radius: 50%;
-        }
+      }     
+      .imgLogo {
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
       }
     }
-    .littleBlackText {
-      @include littleBlackText();
-      margin-bottom: 15px;
-      z-index: 5;
-    }
   }
+  .littleBlackText {
+    @include littleBlackText();
+  }
+}
 
 
 
